vlib/v/checker/tests/globals_error.out
vlib/v/checker/tests/globals_error.vv:1:1: error: use `v -enable-globals ...` to enable globals
    1 | __global (
      | ~~~~~~~~
    2 |     rfcnt int
    3 | )
